unpackaged/main/default/objects/WhatsApp__c/WhatsApp__c.object-meta.xml
<CustomObject>
    <label>Mensaje de WhatsApp</label>
    <nameField>
        <displayFormat>W-{0000}</displayFormat>
        <label>WhatsApp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mensajes de WhatsApp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>