unpackaged/main/default/objects/WhatsApp__c/fields/Attachment_Caption__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Caption__c</fullName>
    <label>Attachment Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>