unpackaged/main/default/objects/WhatsApp__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;https://javer--partial--c.sandbox.vf.force.com/resource/1678894773000/LogoEnlace&quot;, &quot;ENLACE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>