unpackaged/main/default/objects/WhatsApp__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>WhatsApp</relationshipName>
    <type>Lookup</type>
</CustomField>