unpackaged/main/default/objects/WhatsApp__c/fields/User_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>User_Mobile_No__c</fullName>
    <label>User Mobile No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>