unpackaged/main/default/objects/WhatsApp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Message__c</columns>
    <columns>Prospect__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Attachment_Caption__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>